# dpies

./: CHANGES_DEVKIT_CLOSED_LOOP.md  CHANGES_NUPLAN_V11.md  CHANGES_OPTIMIZED.md  README.md  patch.diff  pyproject.toml  requirements.txt
configs/: data.yaml  eval.yaml  model.yaml  train.yaml
configs/nuplan/: dpies_planner.yaml
dpies/actions/: action_filter.py  action_generator.py  coverage_metrics.py  rollout.py  trajectory_quality.py
dpies/common/: config.py  geometry.py  io.py  torch_utils.py  types.py
dpies/data/: cache_reader.py  devkit_utils.py  map_provider.py  nuplan_db.py  preprocess_nuplan.py  scenario_api.py  scenario_index.py  schema_probe.py
dpies/evaluation/: ablations.py  closed_loop_planner.py  evaluate.py  offline_metrics.py
dpies/evidence/: evidence_builder.py  evidence_cost.py  geometry_query.py
dpies/model/: encoders.py  network.py
dpies/selection/: capped_greedy.py
dpies/teacher/: labels.py  local_costs.py  teacher_evaluator.py
dpies/tools/: audit_action_set.py  check_npz_cache.py  closed_loop_inspect.py  dataset_oracle_diagnostics.py  debug_map_provider.py  debug_vis_npz.py  inspect_npz_cache.py  make_toy_cache.py  visualize_sample.py
dpies/training/: collate.py  dataset.py  losses.py  train.py  validate.py
scripts/: build_cache_train.sh  build_cache_val.sh  check_npz_cache.py  eval_closed_loop_nonreactive.sh  eval_closed_loop_reactive.sh  eval_offline.sh  find_bad_npz.py  find_toy_example.py  inspect_db.sh  run_closed_loop_nonreactive.sh  run_closed_loop_reactive_idm.sh  smoke_test.sh  train.sh
(+1 files in other folders)
